Fri Sep  6 05:48:26 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* file.c (rb_path_check): nothing to check under DOSISH.
	  [ruby-list:35772]

Fri Sep  6 05:11:48 2002  Minero Aoki  <aamine@loveruby.net>

	* gc.c (rb_gc): should mark parser.

	* parse.y (rb_gc_mark_parser): new function.

	* intern.h (rb_gc_mark_parser): added.

Thu Sep  5 13:09:22 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_eval): overriding false constant with class/module
	  definition should be error.  (PR#327)

	* eval.c (rb_call0): preset source file/line to pass correct ones
	  to trace_func at end of empty method.  [ruby-dev:18035]

	* ruby.c (require_libraries): not clear source file.
	  [ruby-dev:18074]

Tue Sep  3 00:22:43 2002  Minero Aoki  <aamine@loveruby.net>

	* gc.c (gc_sweep): does reclaim nodes in also compile time, if we
	  can.

	* ruby.c (load_file): omit GC if we can.

	* parse.y (ruby_parser_stack_on_heap): new function.

	* intern.h (ruby_parser_stack_on_heap): added.

Sun Aug 25 20:10:32 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#form): fix ruby-bugs-ja:PR#280, add default action.

Sat Aug 24 13:57:28 2002  Tanaka Akira  <akr@m17n.org>

	* lib/time.rb (Time.rfc2822, Time#rfc2822): preserve localtimeness.

Wed Aug 21 16:43:19 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_cleanup): should not modify the global
	  variable curr_thread.

Tue Aug 20 19:39:03 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_file_s_expand_path): accept drive letter on Cygwin.

	* file.c (is_absolute_path): ditto.

Mon Aug 19 19:01:55 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/inf-ruby.el (inf-ruby-keys): ruby-send-definition
	  conflicted with ruby-insert-end.

	* misc/inf-ruby.el (inferior-ruby-mode): compilation-minor-mode.

	* misc/inf-ruby.el (ruby-send-region): send as here document to
	  adjust source file/line.  [ruby-talk:47113], [ruby-dev:17965]
