@@ -1,3 +1,8 @@
+Fri Sep  6 12:01:18 2002  Minero Aoki  <aamine@loveruby.net>
+
+	* parse.y (rb_gc_mark_parser): should mark all global variables
+	  in parse.y.
+
 Fri Sep  6 05:48:26 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>
 
 	* file.c (rb_path_check): nothing to check under DOSISH.
